KS:M => fixed parameterMap overflow

--- a/keyscore-manager/src/app/common/parameter/style/parameter-module-style.scss
+++ b/keyscore-manager/src/app/common/parameter/style/parameter-module-style.scss
@@ -12,3 +12,7 @@
 .mat-form-field{
   width:100% !important;
 }
+
+.mat-form-field-infix{
+  width:45% !important;
+}
