--- a/keyscore-manager/src/app/pipelines/pipeline-editor/pipely/style/pipely-style.scss
+++ b/keyscore-manager/src/app/pipelines/pipeline-editor/pipely/style/pipely-style.scss
@@ -145,6 +145,7 @@ configurator {
 .configurator-body{
   overflow-y: scroll;
   max-height:calc(95vh - 100px);
+  padding:10px 0;
 }
 
 .configurator-body::-webkit-scrollbar {
